non-compatible/tests/ecc-aws-132-public_instance_with_sensitive_service_is_exposed_to_entire_internet/placebo-green/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "Description": "Managed by Terraform",
                "GroupName": "132_security_group2_green",
                "IpPermissions": [
                    {
                        "FromPort": 4505,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "10.0.0.0/16"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 4505,
                        "UserIdGroupPairs": []
                    }
                ],
                "OwnerId": "this",
                "GroupId": "sg-0344c8fe150259a23",
                "IpPermissionsEgress": [],
                "Tags": [
                    {
                        "Key": "ComplianceStatus",
                        "Value": "Green"
                    },
                    {
                        "Key": "CustodianRule",
                        "Value": "epam-aws-132-public_instance_with_sensative_service_is_exposed_to_entire_internet"
                    }
                ],
                "VpcId": "vpc-0a1a38a0eeb7e1c93"
            },
            {
                "Description": "Managed by Terraform",
                "GroupName": "132_security_group1_green",
                "IpPermissions": [
                    {
                        "FromPort": 80,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 80,
                        "UserIdGroupPairs": []
                    },
                    {
                        "FromPort": 8000,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "10.0.0.0/16"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 8000,
                        "UserIdGroupPairs": []
                    },
                    {
                        "FromPort": 5500,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "10.0.0.0/16"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 5500,
                        "UserIdGroupPairs": []
                    }
                ],
                "OwnerId": "this",
                "GroupId": "sg-0a1e1c86f2f476d9e",
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": []
                    }
                ],
                "Tags": [
                    {
                        "Key": "CustodianRule",
                        "Value": "epam-aws-132-public_instance_with_sensative_service_is_exposed_to_entire_internet"
                    },
                    {
                        "Key": "ComplianceStatus",
                        "Value": "Green"
                    }
                ],
                "VpcId": "vpc-0a1a38a0eeb7e1c93"
            }
        ],
        "ResponseMetadata": {}
    }
}
